--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -21,6 +21,8 @@ jobs:
             cd /home/ubuntu/g19
             pwd
             git pull
+            echo "Doing: sudo docker compose up -d"
+            sudo docker compose up -d
             echo "Doing: sudo systemctl daemon-reload"
             sudo systemctl daemon-reload
             echo "Doing: sudo systemctl restart docker"
