--- a/.github/workflows/frontend1.yml
+++ b/.github/workflows/frontend1.yml
@@ -10,14 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.REGION }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Deploy static site to S3 bucket
       run: aws s3 sync ./public/ s3://iic2173-g19.xyz --delete
