--- a/.github/workflows/frontend2.yml
+++ b/.github/workflows/frontend2.yml
@@ -37,7 +37,7 @@ on:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Deploy static site to S3 bucket
         # working-directory: ./frontend
