--- a/.github/workflows/frontend1.yml
+++ b/.github/workflows/frontend1.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Install
       uses: borales/actions-yarn@v2.3.0
-      # working-directory: ./frontend
+      working-directory: ./frontend
       with:
         cmd: install # will run `yarn install` command
 
