--- a/.github/workflows/frontend1.yml
+++ b/.github/workflows/frontend1.yml
@@ -9,8 +9,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    uses: actions/checkout@v3
-    working-directory: ./frontend
+    - name: Checkout
+      uses: actions/checkout@v3
+      working-directory: ./frontend
 
     - name: Install
       uses: borales/actions-yarn@v2.3.0
