--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview --port 8080",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "deploy": "aws s3 sync dist/ s3://iic2173-g19.xyz"
+    "deploy": "aws s3 sync dist/ s3://iic2173-g19.xyz --delete"
   },
   "dependencies": {
     "@popperjs/core": "2.10.2",
