--- a/.github/workflows/frontend1.yml
+++ b/.github/workflows/frontend1.yml
@@ -3,8 +3,10 @@ name: Upload Vue to S3
 on:
   push:
     branches:
-    - master
-
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   deploy:
     runs-on: ubuntu-latest
