--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.7'
+version: '3.9'
 
 services:
   db:
-    image: postgres
+    image: postgis/postgis
     restart: always
     volumes:
       - database_data:/var/lib/postgresql/data/
@@ -20,7 +20,7 @@ services:
       - nginx_network
       - database_network
     env_file:
-      - ./config/environment/.env
+      - ./config/environment/.env.back
     depends_on:
       - db
 
