--- a/config/environment/.env.back
+++ b/config/environment/.env.back
@@ -8,4 +8,5 @@ POSTGRES_PASSWORD=postgresG19
 POSTGRES_DB=postgresG19
 POSTGRES_HOST=db
 DB_CREATE=True
-DB_DROP=False
+DB_DROP=True
+SENDGRID_API_KEY=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
