--- a/config/environment/.env.back
+++ b/config/environment/.env.back
@@ -11,6 +11,6 @@ DB_CREATE=True
 DB_DROP=True
 DB_POPULATE=True
 SENDGRID_API_KEY=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
-URL_API=https://api.iic2173-g19.xyz
+URL_API=https://30zwhcjsc2.execute-api.us-east-2.amazonaws.com/test
 URL_FRONT=https://iic2173-g19.xyz
 GEOLOCATION_API_KEY=248fe8aaf5e310baca967539ca428688
