--- a/config/environment/.env.back
+++ b/config/environment/.env.back
@@ -8,9 +8,15 @@ POSTGRES_PASSWORD=postgresG19
 POSTGRES_DB=postgresG19
 POSTGRES_HOST=db
 DB_CREATE=True
-DB_DROP=True
-DB_POPULATE=True
+DB_DROP=False
+DB_POPULATE=False
 SENDGRID_API_KEY=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
-URL_API=https://30zwhcjsc2.execute-api.us-east-2.amazonaws.com/test
-URL_FRONT=https://iic2173-g19.xyz
+
+URL_NO_PROXY=172.24.16.1
+URL_API=http://172.24.16.1:8000
+URL_AUTH=http://172.24.16.1:8080
+URL_FRONT=http://172.24.16.1:3000
+
 GEOLOCATION_API_KEY=248fe8aaf5e310baca967539ca428688
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
