--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,21 @@
+# App
 fastapi==0.76.0
-pydantic
 uvicorn[standard]==0.17.6
+pydantic
+
+# DB
 GeoAlchemy2==0.11.1
-bcrypt==3.2.2
 psycopg2-binary
+python-jose[cryptography]
+
+# Celery
+celery
+flower
+redis
+
+# Email
 sendgrid==6.9.7
+
+# Others
+bcrypt==3.2.2
 requests
