--- a/config/nginx/development/app/local.conf
+++ b/config/nginx/development/app/local.conf
@@ -17,14 +17,18 @@ server {
 
 }
 
+upstream flower {
+    server flower:5555;
+}
+
 server {
 
     listen 80;
-    server_name localhost;
+    server_name flower.localhost;
     server_tokens off;
 
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://flower;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
