--- a/config/nginx/development/auth/local.conf
+++ b/config/nginx/development/auth/local.conf
@@ -1,20 +1,18 @@
-upstream hello_django {
-    server django:8000;
+upstream authentication {
+    server authentication:8000;
 }
 
 server {
 
     listen 80;
+    server_name auth.localhost localhost;
+    server_tokens off;
 
     location / {
-        proxy_pass http://hello_django;
+        proxy_pass http://authentication;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
-    }
-
-    location /staticfiles/ {
-        alias /home/ediapp/app/staticfiles/;
     }
 
 }
