--- a/config/nginx/production/auth/local.conf
+++ b/config/nginx/production/auth/local.conf
@@ -1,10 +1,10 @@
-upstream backend {
-    server backend:8000;
+upstream authentication {
+    server authentication:8000;
 }
 
 server {
     listen 80;
-    server_name api.iic2173-g19.xyz www.api.iic2173-g19.xyz	;
+    server_name auth.iic2173-g19.xyz www.auth.iic2173-g19.xyz;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -18,17 +18,17 @@ server {
 
 server {
     listen 443 ssl;
-    server_name api.iic2173-g19.xyz www.api.iic2173-g19.xyz;
+    server_name auth.iic2173-g19.xyz www.auth.iic2173-g19.xyz;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/api.iic2173-g19.xyz/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.iic2173-g19.xyz/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/auth.iic2173-g19.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/auth.iic2173-g19.xyz/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 
     location / {
-        proxy_pass http://backend;
+        proxy_pass http://authentication;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
