Cambios para arreglar problema de cors (#20)
* intento de celery

* Celery Base - Example not working

* Intento de avance en pings

* Fix modelo de ping

* Auth separado creado (#12)

* Inicio de la separacion de la autenticación

Co-authored-by: tomahawk99 <tomahawk99@users.noreply.github.com>
Co-authored-by: Edison Pizarro Godoy <edipizarro@users.noreply.github.com>
Co-authored-by: juanpaxd <juanpaxd@users.noreply.github.com>
Co-authored-by: Agustín González Díaz <agonzd@users.noreply.github.com>

* Avance en servicio auth

* Added auth.localhost nginx

* foobar posible al hacer merge

Co-authored-by: juanpaxd <juanpaxd@users.noreply.github.com>
Co-authored-by: Edison Pizarro Godoy <edipizarro@users.noreply.github.com>
Co-authored-by: tomahawk99 <tomahawk99@users.noreply.github.com>
Co-authored-by: Agustín González Díaz <agonzd@users.noreply.github.com>

Co-authored-by: tomahawk99 <tomahawk99@users.noreply.github.com>
Co-authored-by: Edison Pizarro Godoy <edipizarro@users.noreply.github.com>
Co-authored-by: juanpaxd <juanpaxd@users.noreply.github.com>
Co-authored-by: Agustín González Díaz <agonzd@users.noreply.github.com>
Co-authored-by: Agustin Gonzalez <agonzd@uc.cl>
Co-authored-by: Edison Pizarro <edipizarro@uc.cl>

* Celery base working (#13)

Co-authored-by: Edison Pizarro <edipizarro@uc.cl>

* Fix requests localhost

* avance a medias

* ups

Co-authored-by: juanpaxd <juanpaxd@users.noreply.github.com>
Co-authored-by: Edison Pizarro Godoy <edipizarro@users.noreply.github.com>
Co-authored-by: tomahawk99 <tomahawk99@users.noreply.github.com>
Co-authored-by: Agustín González Díaz <agonzd@users.noreply.github.com>

* cambios correctos

* aun hay errores con jwt

* Nginx deploy conf

* Nginx production config

* nginx conf

* nginx conf

* Nginx (#14)

* nginx

* no https

* terminado kapa

Co-authored-by: juanpaxd <juanpaxd@users.noreply.github.com>
Co-authored-by: Agustín González Díaz <ago

--- a/config/environment/.env.auth
+++ b/config/environment/.env.auth
@@ -14,9 +14,9 @@ SENDGRID_API_KEY=SG.KGjAtesDQ-6RcadkYRAkAQ.e31LUIMfjjWOASTOBPfToE31SST0evb4Ro_NK
 
 
 URL_NO_PROXY=iic2173-g19.xyz
-URL_API=http://api.iic2173-g19.xyz
-URL_AUTH=http://auth.iic2173-g19.xyz
-URL_FRONT=http://iic2173-g19.xyz
+URL_API=http://api.iic2173-g19.xyz/
+URL_AUTH=http://auth.iic2173-g19.xyz/
+URL_FRONT=http://iic2173-g19.xyz/
 
 
 GEOLOCATION_API_KEY=248fe8aaf5e310baca967539ca428688
