--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
 
   ##############################
-  # Authentication Environment #
+  # Application Environment #
   ##############################
 
   nginx_app:
@@ -30,7 +30,7 @@ services:
 
   backend:
     build: ./backend
-    command:  uvicorn main:app --host 0.0.0.0 --port 8000
+    command:  uvicorn main:app --host 0.0.0.0 --port 8000 --log-level debug
     expose:
       - 8000
     volumes:
@@ -126,7 +126,7 @@ services:
 
   authentication:
     build: ./authentication
-    command:  uvicorn main:app --host 0.0.0.0 --port 8000
+    command:  uvicorn main:app --host 0.0.0.0 --port 8000 --log-level debug
     expose:
       - 8000
     volumes:
