:bulb:: Intento de subir a produccion

--- a/config/environment/.env.front
+++ b/config/environment/.env.front
@@ -1,2 +1,5 @@
 BASE_URL=http://192.168.1.81:3000
 API_URL=http://192.168.1.81:8000
+
+BASE_URL=http://iic2173-g19.xyz
+API_URL=http://api.iic2173-g19.xyz
