--- a/config/environment/.env.auth
+++ b/config/environment/.env.auth
@@ -13,17 +13,17 @@ DB_POPULATE=False
 SENDGRID_API_KEY=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
 
 
-URL_NO_PROXY=iic2173-g19.xyz
-URL_API=http://api.iic2173-g19.xyz
-URL_AUTH=http://auth.iic2173-g19.xyz
-URL_FRONT=http://iic2173-g19.xyz
-URL_CHAT=http://auth.iic2173-g19.xyz
-
 URL_NO_PROXY=http://192.168.1.81
 URL_API=http://192.168.1.81:8000
 URL_AUTH=http://192.168.1.81:8080
 URL_FRONT=http://192.168.1.81:3000
 URL_CHAT=192.168.1.81:8088
+
+URL_NO_PROXY=iic2173-g19.xyz
+URL_API=http://api.iic2173-g19.xyz
+URL_AUTH=http://auth.iic2173-g19.xyz
+URL_FRONT=http://iic2173-g19.xyz
+URL_CHAT=http://chat.iic2173-g19.xyz
 
 GEOLOCATION_API_KEY=248fe8aaf5e310baca967539ca428688
 CELERY_BROKER_URL=redis://redis:6379/0
