--- a/config/nginx/production/global/local.conf
+++ b/config/nginx/production/global/local.conf
@@ -118,3 +118,42 @@ location / {
 #     }
 
 # }
+
+
+upstream chat {
+    server chat:7777;
+}
+
+server {
+    listen 80;
+    server_name chat.iic2173-g19.xyz www.chat.iic2173-g19.xyz;
+
+location / {
+    proxy_pass http://chat;
+    proxy_set_header Host $host;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # proxy_redirect off;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    }
+}
+}
+
+
+upstream ws_chat {
+    server chat:9229;
+}
+
+server {
+    listen 81;
+    server_name ws_chat.iic2173-g19.xyz www.ws_chat.iic2173-g19.xyz;
+
+location / {
+    proxy_pass http://chat;
+    proxy_set_header Host $host;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # proxy_redirect off;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+}
+}
