--- a/config/nginx/production/global/local.conf
+++ b/config/nginx/production/global/local.conf
@@ -149,7 +149,7 @@ server {
     server_name ws_chat.iic2173-g19.xyz www.ws_chat.iic2173-g19.xyz;
 
 location / {
-    proxy_pass http://chat;
+    proxy_pass http://ws_chat;
     proxy_set_header Host $host;
     # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     # proxy_redirect off;
