--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
   db:
     container_name: db
     image: postgis/postgis
+    ports: 
+      - 5432:5432
     restart: unless-stopped
     volumes:
       - database_data:/var/lib/postgresql/data/
@@ -78,6 +80,8 @@ services:
     container_name: redis
     image: redis:7.0.0-alpine
     restart: unless-stopped
+    ports: 
+      - 6379:6379
     networks:
       - app_network
       - app_db_network
@@ -209,7 +213,6 @@ services:
       - 6379
     networks:
       - chat_network
-
 
 networks:
   nginx_network:
